# enterprise-nl2sql

./: .env.example  .gitignore  AGENTS.md  README.md  analyze_quality_gap.py  bird_benchmark_full.py  bird_multidb_benchmark.py  debug_benchmark.py  pyproject.toml  req.md  req_add_e2e_logging.md  req_failure_analysis.md  req_fix_fake_ddl.md  req_fixes_3.md  req_full_pipeline_benchmark.md  req_llm_judge.md  req_model_change.md  req_postprocess_fixes.md  req_prompt_fixes.md  req_weak_db_fixes.md  router_e2e_benchmark.py
bird_semantic_engine/: _summary.json
demo/: README.md  pyproject.toml
docs/: 01-product-design.md  02-architecture.md  NL2SQL_POC_Showcase_Deck.html  NL2SQL_Pipeline_POC_Final_Report.md  architecture.md  evaluation-plan.md  implementation-status.md  semantic-engine-enhancement-plan.md
eval_cases/: commerce_cases.yaml  cross_domain_cases.yaml  group_1_4.yaml  group_5_8.yaml
phases/: phase-00-alignment-and-scope.md  phase-01-codex-requirements.md  phase-01-semantic-registry-mvp.md  phase-02-metadata-ingestion-and-retrieval.md  phase-03-semantic-resolver.md  phase-04-sql-generation-pipeline.md  phase-05-sql-validation-and-execution.md  phase-06-repair-selection-and-feedback.md  phase-07-evaluation-runner-and-pilot.md
requirements/: req_add_e2e_logging.md  req_fix_fake_ddl.md  req_fixes_3.md  req_full_pipeline_benchmark.md  req_llm_judge.md
scripts/: bird_eval_stratified.py  bird_schema_context.py  build_bird_semantic_engine_models.py  codex_failure_analysis.py  cross_db_eval.py  debug_benchmark_one.py  debug_pipeline_fail.py  failure_root_cause.py  (+14 more)
(+864 files in other folders)
